...
    <string name="no_chats">Er zijn nog geen chats om weer te geven.</string>
    <string name="send">Versturen</string>
    <string name="photo_picker_button">Foto sturen</string>
    <string name="write_a_msg">Schrijf een bericht…</string>

    <!-- Auth activity -->
    <string name="button_sigin">Inloggen</string>
    <string name="button_signup">Account Aanmaken</string>
    <string name="button_signout">Afmelden</string>
    <string name="user_name">Volledige naam</string>
    <string name="signup_disclaimer">Employa zal uw gegevens nooit delen met derde partijen.</string>
    <string name="title_baseline">Employa maakt bijklussen gemakkelijk en veilig.</string>
    <string name="email">E-mail</string>
...
        Pas uw criteria aan en probeer het opnieuw.</string>
    <string name="loading">Zoekertjes laden…</string>
    <string name="title_error">Er ging iets mis…</string>
    <string name="description_error">We konden de zoekertjes niet opvragen.
        Probeer het later opnieuw.</string>

    <string name="timestamps_zero">Maakt niet uit</string>
    <plurals name="timestamps">
        <item quantity="one">%1$s</item>
        <item quantity="two">%1$s - %2$s</item>
        <item quantity="other">Meerdere data</item>
    </plurals>

...
    <string name="placeholder_pay">Verloning (b.v. €9/u)</string>
    <string name="date_does_not_matter">Maakt niet uit</string>
    <string name="date_choice">Een of meer data</string>
    <string name="select_dates">Data kiezen</string>

    <!-- Generic stuff -->
    <string name="confirm">Bevestigen</string>
    <string name="delete">Verwijderen</string>
    <string name="advertisement_placed">Zoekertje geplaatst!</string>
    <string name="something_went_wrong">Er ging iets mis! Probeer het later opnieuw.</string>
    <string name="complete_action_using">Voltooi actie door</string>
    <string name="back_button">Terug knop</string>

    <string name="title_add_adv">Titel:</string>
    <string name="description_add_adv">Omschrijving:</string>
    <string name="pay_add_adv">Verloning:</string>
    <string name="enter_address">Enter address here</string>
    <string name="open_maps_button">Open Maps</string>
    <string name="location_title">Locatie:</string>
    <string name="put_nl">Plaatsen</string>
    <string name="when">Wanneer</string>

    <!-- Maps / locatie -->
    <string name="location_not_found">Locatie niet gevonden</string>
    <string name="select_a_location">Selecteer een locatie</string>

...
