...
        android:text="@string/button_sigin"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
...
        app:errorMessage ="@{viewModel.emailError}"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAllCaps="false"
        />
        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
...
            app:errorMessage="@{viewModel.passwordError}"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            />
    <Button
        android:id="@+id/button_signin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="30sp"
        android:text="@string/button_sigin"
...
